demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  annotations:
    domain: sub.dsyer.com
